Add tutors' credentials

--- a/config.toml
+++ b/config.toml
@@ -6,7 +6,7 @@ theme = "hugo-initio"
 [params]
     name = "Your Most Trusted Writing Tutors"
     description = "For College and Graduate School Application Essays"
-    email = "chl3565@g.harvard.edu"
+    email = "alexander@wordmason.github.io"
     phone = ""
     address = ""
     year = "2022"
