Update the contact email

--- a/config.toml
+++ b/config.toml
@@ -6,7 +6,7 @@ theme = "hugo-initio"
 [params]
     name = "Your Most Trusted Writing Tutors"
     description = "For College and Graduate School Application Essays"
-    email = "alexander@uwtwriting.com"
+    email = "uwtwriter@gmail.com"
     phone = ""
     address = ""
     year = "2022"
